--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ body {
 .game-grid > * {
     border: solid 1px;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 5rem;
 }
 
 .github {
